--- a/src/01-cart/styles/CartNavBar.scss
+++ b/src/01-cart/styles/CartNavBar.scss
@@ -23,7 +23,7 @@ $font-family: Arial, Helvetica, sans-serif;
 $border-radius-card: 10px;
 $border-radius-button: 8px;
 
-.y-section-nav {
+.y-section-cart-nav {
   width: 100%;
   max-width: 390px;
   position: fixed;
@@ -58,6 +58,7 @@ $border-radius-button: 8px;
 
     .y-icon-round {
       width: 30px;
+      height: 30px;
       aspect-ratio: 1/1;
       border-radius: 50%;
       // overflow: hidden;
@@ -78,14 +79,14 @@ $border-radius-button: 8px;
 
       .y-cart-amount {
         position: absolute;
-        width: 30px;
-        height: 30px;
+        width: 20px;
+        height: 20px;
         top: -18%;
         left: 55%;
         border-radius: 50%;
         background-color: $btn-red;
-        font-size: 12px;
-        line-height: 30px;
+        font-size: 10px;
+        line-height: 20px;
         text-align: center;
         color: white;
         font-weight: bold;
@@ -100,7 +101,7 @@ $border-radius-button: 8px;
 }
 
 @media (min-width: 391px) {
-  .y-section-nav {
+  .y-section-cart-nav {
     max-width: 1920px;
     height: 90px;
     padding: 0 40px;
