--- a/src/01-cart/styles/RemoveItemBtn.scss
+++ b/src/01-cart/styles/RemoveItemBtn.scss
@@ -69,6 +69,7 @@ $border-radius-button: 8px;
         background-color: $btn-red;
         // border: $border-yellow-lg;
         padding: 8px 20px;
+        height: 38px;
     
         .y-remove-item-icon {
             margin-right: 8px;
