--- a/src/01-cart/styles/CartInfo.scss
+++ b/src/01-cart/styles/CartInfo.scss
@@ -59,8 +59,22 @@ $border-radius-button: 8px;
             display: none;
 
             .y-Cart-icon {
-                width: 30px;
+                width: 36px;
+                height: 36px;
+                padding: 1px;
                 margin-right: 10px;
+                border-radius: 50%;
+                border: $border-sm;
+                animation: y-cart-list-icon 1.5s 1 linear;
+                @keyframes y-cart-list-icon {
+                    0% {
+                        transform: rotate(0deg);
+                    }
+
+                    100% {
+                        transform: rotate(360deg);
+                    }
+                }
                 img {
                     width: 100%;
                 }
@@ -191,33 +205,34 @@ $border-radius-button: 8px;
                 background-color: #fff;
                 
                 .y-Cart-pickup-radio {
-                    padding: 20px;
+                    padding: 15px;
                     li {
                         display: flex;
                         align-items: center;
-                        margin-bottom: 10px;
-                        height: 60px;
-                        padding: 10px 20px;
+                        margin-bottom: 5px;
+                        height: 40px;
+                        padding: 5px 15px;
                         
                     }
 
                     .y-pickup-radio-icons {
-                        width: 20px;
-                        height: 20px;
-                        margin-right: 20px;
+                        width: 16px;
+                        height: 16px;
+                        margin-right: 12px;
                         .fa-triangle {
                             // font-size: 24px;
                             // color: $main-text;
                         }
                         img {
                             width: 100%;
+                            height: 100%;
                             object-fit: cover;
                         }
                     }
                     
                     .y-pickup-way-options {
-                        margin-right: 20px;
-                        font-size: 20px;
+                        margin-right: 12px;
+                        font-size: 12px;
                         line-height: 100%;
                     
                     }
@@ -226,16 +241,18 @@ $border-radius-button: 8px;
                     }
                 
                     .y-pickup-notice {
+                        display: none;
                         background-color: $btn-pink;
                         color: #fff;
                         font-weight: bold;
-                        letter-spacing: 2px;
+                        letter-spacing: 1px;
+                        font-size: 10px;
                         // line-height: 30px;
                         padding: 3px 10px;
                     }
 
                     .y-Cart-Pick-selected {
-                        border: 2px solid rgba(114, 114, 114, 0.75);
+                        border: 1px solid rgba(114, 114, 114, 0.75);
                         box-shadow: 3px 3px 3px rgba(114, 114, 114, 0.75);
                         // border-radius: $border-radius-button;
                     }
@@ -259,7 +276,7 @@ $border-radius-button: 8px;
                                 padding: 4px 8px;
                                 outline: none;
                                 border: none;
-                                font-size: 18px;
+                                font-size: 12px;
                                 color: #999999;
                                 display: block;
                                 // text-align: center;
@@ -279,16 +296,28 @@ $border-radius-button: 8px;
                     display: flex;
                     flex-wrap: wrap;
                     .y-Cart-member-details {
-                        font-size: 20px;
-                        line-height: 50px;
+                        font-size: 14px;
+                        line-height: 20px;
                         margin-bottom: 10px;
+                        margin-left: 10px;
+                        display: flex;
+                        .y-pickup-radio-icons {
+                            width: 20px;
+                            height: 20px;
+                            margin-right: 20px;
+
+                            img {
+                                width: 100%;
+                                height: 100%;
+                            }
+                        }
                     }
                     .y-Cart-member-left {
-                        width: 20%;
+                        width: 34%;
 
                     }
                     .y-Cart-member-right {
-                        width: 80%;
+                        width: 55%;
                     }
                 }
             }
@@ -311,7 +340,8 @@ $border-radius-button: 8px;
             .y-Cart-details-top {
                 display: none;
                 .y-Cart-details-header {
-
+                    font-size: 14px;
+                    
                 }
 
                 .y-Cart-details-name {
@@ -362,27 +392,6 @@ $border-radius-button: 8px;
             }
         }
 
-        .y-Cart-rec {
-            .y-Cart-rec-tab {
-                
-            }
-
-            .y-Cart-rec-top {
-                .y-Cart-rec-header {
-                    
-                }
-            }
-
-            .y-Cart-rec-bottom {
-
-                .y-Cart-rec-row {
-
-                    .y-Cart-rec-wrap {
-
-                    }
-                }
-            }
-        }
     }
 
     .y-Cart-bottom{
@@ -435,8 +444,12 @@ $border-radius-button: 8px;
                 align-items: center;
     
                 .y-Cart-icon {
-                    // display: none;
-                    width: 48px;
+                    width: 45px;
+                    height: 45px;
+                    border: $border-lg;
+                    padding: 2px;
+                    margin-right: 12px;
+                    background-color: #fdefc2;
                     img {
                         width: 100%;
                     }
@@ -523,9 +536,9 @@ $border-radius-button: 8px;
                     border: $border-lg;
                     border-bottom: none;
                     border-radius: 8px 8px 0 0;
-                    // background-color: #fff;
                     text-align: center;
-                    // color: $main-blue;
+                    background-color: $main-yellow;
+                    color: $main-blue;
                     font-weight: bold;
                     letter-spacing: 2px;
                 }
@@ -544,7 +557,73 @@ $border-radius-button: 8px;
     
                         }
                     }
+        .y-Cart-member {
+            
+            .y-Cart-member-main {
+                padding: 20px;
+                .y-Cart-member-info {
+                    display: flex;
+                    flex-wrap: wrap;
+                    .y-Cart-member-details {
+                        font-size: 20px;
+                        line-height: 50px;
+                        margin-bottom: 10px;
+                        margin-left: 20px;
+                        display: flex;
+                        .y-pickup-radio-icons {
+                            width: 20px;
+                            height: 20px;
+                            margin-right: 20px;
 
+                            img {
+                                width: 100%;
+                                height: 100%;
+                            }
+                        }
+                    }
+                    .y-Cart-member-left {
+                        width: 20%;
+
+                    }
+                    .y-Cart-member-right {
+                        width: 70%;
+                    }
+                }
+            }
+        }
+        .y-Cart-member {
+            .y-Cart-member-main {
+                padding: 20px;
+                .y-Cart-member-info {
+                    display: flex;
+                    flex-wrap: wrap;
+                    .y-Cart-member-details {
+                        font-size: 20px;
+                        line-height: 50px;
+                        margin-bottom: 10px;
+                        margin-left: 20px;
+                        display: flex;
+                        .y-pickup-radio-icons {
+                            width: 20px;
+                            height: 20px;
+                            margin-right: 20px;
+
+                            img {
+                                width: 100%;
+                                height: 100%;
+                            }
+                        }
+                    }
+                    .y-Cart-member-left {
+                        width: 20%;
+
+                    }
+                    .y-Cart-member-right {
+                        width: 70%;
+                    }
+                }
+            }
+        }
                     .y-Cart-pickup-radio {
 
                         li {
@@ -567,8 +646,17 @@ $border-radius-button: 8px;
 
                     .y-coupon-input {
                         border: $border-lg;
+                            border-radius: $border-radius-button;
+                            overflow: hidden;
+                            background-color: #fff;
                         input {
                             padding: 4px 20px;
+                            outline: none;
+                                border: none;
+                                font-size: 18px;
+                                color: #999999;
+                                display: block;
+                                // text-align: center;
                         
                         }
                     }
@@ -624,12 +712,6 @@ $border-radius-button: 8px;
                 position: relative;
                 margin-bottom: 80px;
 
-                .y-empty-cart-wrap {
-                    display: block;
-                    position: absolute;
-                    top: 0;
-                    right: 10px;
-                }
                 
                 .y-Cart-tab {
                     display: block;
@@ -638,11 +720,11 @@ $border-radius-button: 8px;
                     border: $border-lg;
                     border-bottom: none;
                     border-radius: 8px 8px 0 0;
-                    background-color: #fff;
                     text-align: center;
-                    color: $main-blue;
                     font-weight: bold;
                     letter-spacing: 2px;
+                    background-color: $main-yellow;
+                    color: $main-blue;
                 }
     
                 .y-Cart-details-tab {
@@ -666,26 +748,27 @@ $border-radius-button: 8px;
                     }
     
                     .y-Cart-details-name {
-                        width: calc(40% - 3px);
+                        width: calc(52% - 3px);
                         border-right: 3px solid #fff;
                     }
     
+                    .y-Cart-details-origin {
+                        width: calc(12% - 3px);
+                        border-right: 3px solid #fff;
+
+                    }
                     .y-Cart-details-price {
-                        width: calc(13% - 3px);
+                        width: calc(12% - 3px);
                         border-right: 3px solid #fff;
                     }
     
                     .y-Cart-details-quantity {
-                        width: calc(13% - 3px);
+                        width: calc(12% - 3px);
                         border-right: 3px solid #fff;
                     }
     
                     .y-Cart-details-unit {
-                        width: calc(13% - 3px);
-                        border-right: 3px solid #fff;                    }
-    
-                    .y-Cart-details-actions {
-                        width: 21%;
+                        width: 13%;
                     }
                 }
     
