--- a/src/01-cart/styles/CartItemsInfo.scss
+++ b/src/01-cart/styles/CartItemsInfo.scss
@@ -89,6 +89,9 @@ $border-radius-button: 8px;
             }
         }
     
+        .y-Cart-items-origin {
+            text-align: center;
+        }
         .y-Cart-items-price {
             width: 10%;
 
@@ -146,22 +149,10 @@ $border-radius-button: 8px;
             }
         }
     
-        .y-Cart-items-actions {
-            width: 21%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            
-            .y-Cart-WishListBtn-wrap {
-    
-            }
-    
-            .y-Cart-RemoveItemBtn-wrap {
-    
-            }
+        .y-Cart-items-text {
+
         }
+        
     
     }
     
@@ -184,7 +175,7 @@ $border-radius-button: 8px;
             margin-bottom: 15px;
     
             .y-Cart-items-info {
-                width: 40%;
+                width:52%;
                 align-items: center;
                 padding: 20px 40px;
     
@@ -193,8 +184,11 @@ $border-radius-button: 8px;
                     .y-Cart-items-sale {
                         padding: 8px 12px;
                         letter-spacing: 2px;
-    
-                    
+                        width: 90px;
+                        font-size: 14px;
+                        top: 10px;
+                        left: -10px;
+                        font-weight: bold;
                     }
         
                     .y-Cart-items-info-pic {
@@ -216,74 +210,43 @@ $border-radius-button: 8px;
 
                 }
             }
-        
+            .y-Cart-items-origin {
+                width: 12%;
+            }
             .y-Cart-items-price {
-                width: 13%;
+                width: 12%;
     
                 p {
                     font-size: 16px;
+                    color: $btn-red;
                 }
             }
         
             .y-Cart-items-quantity {
-                width: 13%;
+                width: 12%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
     
-                select {
-                    margin: 0 auto;
-                    width: 80px;
-                    padding: 8px 16px;
-                    padding-right: 36px;
-                    position: relative;
-                    border: $border-white-lg;
-                    // box-shadow: $btn-shadow-lg;
-                    border-radius: $border-radius-button;
-                    appearance:none;
-                    -moz-appearance:none;
-                    -webkit-appearance:none;
-                    background: {
-                        image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), linear-gradient($main-yellow, $main-yellow);
-                        image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), -webkit-linear-gradient($main-yellow, $main-yellow);
-                        image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), -moz-linear-gradient($main-yellow, $main-yellow);
-                        position: right 12px top 50%, 0 0;
-                        size: contain, cover;
-                        repeat: no-repeat, repeat;
-    
-                    }
-                    
-                    option {
-                        appearance: none;
-                        // font-weight: bold;
-                    }
-                }
+                
             }
         
             .y-Cart-items-unit {
-                    width: 13%;
+                    width: 12%;
     
                 p {
                     text-align: center;
                     font-weight: bold;
                 }
             }
-        
-            .y-Cart-items-actions {
-                width: 21%;
-                height: 100%;
-                display: flex;
-                flex-direction: column;
-                // justify-content: space-between;
-                align-items: center;
+            .y-Cart-items-text {
+                p {
+                    text-align: center;
+                font-weight: bold;
+                letter-spacing: 2px;
+                font-size: 20px;
+                }
                 
-                .y-Cart-WishListBtn-wrap {
-
-                }
-        
-                .y-Cart-RemoveItemBtn-wrap {
-        
-                }
             }
         
         }
