--- a/src/01-cart/styles/ContinueShoppingBtn.scss
+++ b/src/01-cart/styles/ContinueShoppingBtn.scss
@@ -31,23 +31,24 @@ $border-radius-button: 8px;
     box-sizing: border-box;
 }
 .y-continue-shopping-border {
-    border-radius: $border-radius-button;
-    border: $border-white-sm;
+    border-radius: 5px;
+    // border: $border-white-sm;
     background-color: $btn-green;
-    padding: 2px 20px;
-    display: none;
-    width: 200px;
+    padding: 5px 5px;
+    width: 90px;
     
     .y-continue-shopping {
         color: $main-text;
-        font-size: 14px;
-        font-weight: bold;
+        font-size: 12px;
         letter-spacing: 2px;
+        text-align: center;
     }
 }
 
 @media (min-width: 391px) {
     .y-continue-shopping-border {
+        border-radius: $border-radius-button;
+        width: 200px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -56,6 +57,7 @@ $border-radius-button: 8px;
         padding: 8px 35px;
 
         .y-continue-shopping {
+            font-weight: bold;
             font-size: 20px;
         }
     }
