--- a/src/01-cart/styles/TapPay.scss
+++ b/src/01-cart/styles/TapPay.scss
@@ -57,6 +57,7 @@ $border-radius-button: 8px;
                 border: 1px solid rgb(175, 175, 175);
                 margin: 5px 0;
                 padding: 5px;
+                font-size: 20px;
             }
             button {
                 background-color: transparent;
