--- a/src/01-cart/styles/WishListBtn.scss
+++ b/src/01-cart/styles/WishListBtn.scss
@@ -69,9 +69,10 @@ $border-radius-button: 8px;
         background-color: $main-yellow;
         // border: $border-yellow-lg;
         padding: 8px 20px;
+        height: 38px;
     
         .y-wish-list-icon {
-            width: 22px;
+            width: 20px;
             height: 22px;
             margin-right: 8px;
             img {
