--- a/src/04-product/components/style/ProductComment.scss
+++ b/src/04-product/components/style/ProductComment.scss
@@ -1,11 +1,11 @@
 main {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    letter-spacing: 2px;
-  }
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  letter-spacing: 2px;
+}
 $main-blue: #2b325c;
 $main-yellow: #fad249;
 $main-text: #5e5e5e;
@@ -23,19 +23,19 @@ $main-border-radius: 8px;
 }
 %a-text {
   font-size: 22px;
-//   font-weight: 600;
+  //   font-weight: 600;
   color: #5e5e5e;
   letter-spacing: 1.5px;
 }
 %a-title {
   font-size: 22px;
-//   font-weight: 600;
+  //   font-weight: 600;
   color: #2b325c;
   letter-spacing: 1.5px;
 }
 %a-secondary-color-text {
   font-size: 22px;
-//   font-weight: 600;
+  //   font-weight: 600;
   color: #113f75;
 }
 %a-flex {
@@ -55,19 +55,20 @@ $main-border-radius: 8px;
     align-items: center;
     margin-top: 10px;
     .a-commentInput {
-      width: 420px;
-      height: 80px;
+      width: 400px;
+      height: 150px;
       border-radius: $main-border-radius;
       appearance: none;
       -moz-appearance: none;
-      border: 4px solid $main-blue;
+      border: 3px solid $main-blue;
       background-color: $secondary-yellow;
       text-align: center;
       outline: none;
+      z-index: 100;
     }
     .a-sumbitButton {
       width: 100px;
-      height: 45px;
+      height: 50px;
       background-color: $main-yellow;
       border: 3px solid $secondary-blue;
       border-radius: $main-border-radius;
@@ -84,33 +85,36 @@ $main-border-radius: 8px;
   }
 }
 
-
-.a-productUserComment {
-    width: 420px;
-    // position: relative;
-    // background-color: $secondary-yellow;
-    .a-productRating {
-      // position: absolute;
-      // top: -205px;;
-      // left: 230px;
-      font-size: 60px;
-      font-weight: 600;
-      color: $main-yellow;
-    }
-  .a-productUserContent {
-    display: flex;
-    align-items: center;
-    .a-memberPhoto {
-      width: 40px;
+.a-productUserContent {
+  font-size: 20px;
+  width: 400px;
+  height: 80px;
+  color: $main-text;
+  // padding: 5px;
+  justify-content: start;
+  align-items: center;
+  display: flex;
+  .a-memberPhoto {
+    width: 60px;
+    height: 60px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-left: 30px;
+    img {
+      width: 100%;
       object-fit: cover;
-      @extend %a-text;
-      img {
-        width: 100%;
-        object-fit: cover;
-      }
     }
   }
-  .a-memberCommentWrapper {
-    height: 35px;
+  .a-memberName {
+    color: $secondary-blue;
+    font-size: 20px;
+    font-weight: 500;
+    padding-right: 8px;
   }
+  .userComment {
+    color: $main-text;
+    font-size: 20px;
+    height: 50px;
+   //  font-weight:;
+   }
 }
