--- a/src/04-product/components/style/ProductFilter.scss
+++ b/src/04-product/components/style/ProductFilter.scss
@@ -116,7 +116,7 @@ $main-border-radius: 8px;
       margin-top: 25px;
     }
     .a-categoryWrapper {
-      width: 840px;
+      width: 900px;
       display: flex;
       align-items: flex-end;
       flex-wrap: wrap;
@@ -126,9 +126,17 @@ $main-border-radius: 8px;
           @extend %a-flex;
           flex-direction: column;
           margin-top: 30px;
+          .a-iconWrapper.blueTheme {
+            border: 8px solid #87efbd;
+            background-color: $secondary-blue;
+          }
+          .a-iconWrapper.yellowTheme {
+            border: 8px solid $secondary-blue;
+            background-color: $main-yellow;
+          }
           .a-iconWrapper {
-            width: 140px;
-            height: 140px;
+            width: 160px;
+            height: 160px;
             border-radius: 50%;
             overflow: hidden;
             margin: 10px 10px 5px 10px;
@@ -152,10 +160,6 @@ $main-border-radius: 8px;
               padding-left: 5px;
             }
           }
-          // .a-categoryIconWrapper:hover {
-          //   border: 8px solid $secondary-blue;
-          //   background-color: $main-yellow;
-          // }
         }
       }
     }
@@ -175,6 +179,7 @@ $main-border-radius: 8px;
   font-weight: 500;
   margin-bottom: 100px;
 }
+
 .a-productCardsWrapper {
   display: flex;
   justify-content: center;
@@ -184,7 +189,8 @@ $main-border-radius: 8px;
     display: flex;
   }
   .a-sideBar {
-    width: 350px;
+    width: 300px;
+    margin: 80px 0 0 100px;
     .a-sideBarWrapper {
       position: relative;
       position: fixed;
@@ -194,7 +200,7 @@ $main-border-radius: 8px;
         overflow: hidden;
         padding: 10px 0 0 15px;
         position: absolute;
-        top: -20px;
+        top: -120px;
         left: 20px;
         rotate: -20deg;
         img {
@@ -204,8 +210,8 @@ $main-border-radius: 8px;
         }
       }
       .a-searchBarWrapper {
-        margin: 100px 50px 0 30px;
-        width: 200px;
+        // margin: 100px 50px 0 30px;
+        width: 220px;
         height: 500px;
         background-color: $main-yellow;
         border-radius: 8px;
@@ -226,7 +232,7 @@ $main-border-radius: 8px;
           background-color: $secondary-yellow;
           border-radius: 30px;
           display: inline-flex;
-          margin: 10px 0;
+          margin: 12px 0;
         }
         .a-optionWrapper:hover {
           background-color: $green;
@@ -248,8 +254,8 @@ $main-border-radius: 8px;
       justify-content: center;
       align-items: flex-start;
       flex-wrap: wrap;
-      width: 1200px;
-      margin: 30px 5px 5px 50px;
+      width: 1500px;
+      margin: 30px 5px 5px 0;
       .a-filterProudctWrapper {
         display: flex;
         flex-direction: column;
