--- a/src/00-homepage/styles/AboutUs.scss
+++ b/src/00-homepage/styles/AboutUs.scss
@@ -15,7 +15,7 @@ main {
     left: 22%;
     top: 10%;
     // z-index: 100;
-    background-color: #ffe77a;
+    background-color: rgb(255, 231, 170);
     border-radius: 10px;
     color: #5e5e5e;
     font-weight: 700;
@@ -58,14 +58,14 @@ main {
     }
   }
 }
-@media (max-width: 391px) {
+@media (max-width: 390px) {
   .a-video {
     .a-aboutUs {
-      left: 10px;
+      left: 50px;
       top: -20px;
-      font-size: 14px;
-      line-height: 14px;
-      padding: 10px 20px;
+      font-size: 12px;
+      line-height: 12px;
+      padding: 15px 15px;
     }
     .a-videoWrapper{
       width: 80%;
