--- a/src/06-event/styles/06-event-02-events.scss
+++ b/src/06-event/styles/06-event-02-events.scss
@@ -114,7 +114,7 @@ body {
       padding-left: 0;
     }
     li {
-      cursor:url(./../svg/green-pointer.svg) ,pointer;
+      cursor:pointer;
       position: relative;
       div {
         // outline: 3px solid $colorDarkGrey;
@@ -167,7 +167,7 @@ body {
     z-index: -1;
     overflow: hidden;
     div{
-      cursor:url(./../svg/green-pointer.svg) ,pointer;
+      cursor:pointer;
     }
     @media (max-width: 390px) {
       margin-top: 15px;
@@ -297,7 +297,7 @@ body {
     }
     img {
 
-      cursor:url(./../svg/green-pointer.svg) ,pointer;
+      cursor:pointer;
       overflow: hidden;
       @media (max-width: 390px) {
         transform: scale(1);
@@ -349,7 +349,7 @@ body {
         display: flex;
         justify-content: space-between;
         img {
-      cursor:url(./../svg/green-pointer.svg) ,pointer;
+      cursor:pointer;
           width: 5%;
           @media (max-width: 390px) {
             display: none;
