--- a/src/01-cart/styles/CartNavBar.scss
+++ b/src/01-cart/styles/CartNavBar.scss
@@ -59,7 +59,6 @@ $border-radius-button: 8px;
     .y-icon-round {
       width: 30px;
       height: 30px;
-      aspect-ratio: 1/1;
       border-radius: 50%;
       // overflow: hidden;
       border: $border-sm;
@@ -124,6 +123,7 @@ $border-radius-button: 8px;
     .y-nav-right {
       width: 300px;
       .y-icon-round {
+        width: 55px;
         width: 55px;
         border: $border-lg;
         margin-right: 12px;
