--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -155,7 +155,8 @@ $main-border-radius: 8px;
 
     .r-home-event-container {
       width: 50%;
-      margin: 50px auto;
+      margin: 0 auto;
+      padding: 50px 0;
       position: relative;
       .r-home-event-titlebox {
         position: absolute;
