edit links for event & cartDone navigate

--- a/src/01-cart/styles/CheckCartInfo.scss
+++ b/src/01-cart/styles/CheckCartInfo.scss
@@ -35,7 +35,9 @@ $border-radius-button: 8px;
     // border: $border-white-sm;
     background-color: $main-yellow;
     padding: 5px 5px;
-    width: 90px;    
+    width: 90px; 
+    text-align: center;
+
     .y-check-info-pay {
         color: $main-text;
         font-size: 12px;
